using System;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using UnityEngine;
public static class AnimationStrings
{
    public static readonly string IsMoving = "IsMoving";
    public static readonly string IsRunning = "IsRunning";
    public static readonly string IsGrounded = "IsGrounded";
    public static readonly string Jump = "Jump";
    public static readonly string yVelocity = "yVelocity";
    public static readonly string IsOnWall = "IsOnWall";
    public static readonly string IsOnCeiling = "IsOnCeiling";
    public static readonly string Attack = "Attack";
    public static readonly string canMove = "canMove";
    public static readonly string hasTarget = "hasTarget";
    public static readonly string IsAlive = "IsAlive";
}

